<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>http_requester</name>
  <version>0.1.0</version>
  <description>
    This package provides a ROS Node with a ROS Service for making HTTP requests.
  </description>
  <maintainer email="wjwwood@gmail.com">William Woodall</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>http_requester_interfaces</depend>
  <depend>libcurl_vendor</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
